DevOCL/src/objects/CLQ_Role__c.object
<CustomObject>
    <description>Role of a contact in an organization</description>
    <fields>
        <fullName>CLQ_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to document children involved in Incident/Injury</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Contact_DOB__c</fullName>
        <formula>TEXT(CLQ_Contact__r.Birthdate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact DOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Contact_Name__c</fullName>
        <formula>CLQ_Contact__r.FirstName + &apos; &apos; +  CLQ_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_End_Date__c</fullName>
        <inlineHelpText>Date the individual ended in this role</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Role object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Organization this individual as a role with</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Individuals</relationshipLabel>
        <relationshipName>Organization_Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Program Transaction that created this record</inlineHelpText>
        <label>Program Transaction Source</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Associated Individuals</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Role is a junction object between Program and Contact</description>
        <inlineHelpText>Role is a junction object between Program and Contact</inlineHelpText>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Associated Individuals</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Role__c</fullName>
        <description>Role of a contact in an organization or program.</description>
        <inlineHelpText>Role of a contact in an organization or program.</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complainant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Start_Date__c</fullName>
        <inlineHelpText>Date the individual started in this role</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Status__c</fullName>
        <description>This field describes the current role status of the contact on the program.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not related</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CLQ_Case__c</columns>
        <columns>CLQ_Contact__c</columns>
        <columns>CLQ_Program__c</columns>
        <columns>CLQ_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Role-{00000000}</displayFormat>
        <label>Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <recordTypes>
        <fullName>CLQ_Organization_Role</fullName>
        <active>true</active>
        <description>Role associated to an organization</description>
        <label>Organization Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Site_Role</fullName>
        <active>true</active>
        <description>Role associated to a Site</description>
        <label>Site Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Role</fullName>
        <active>true</active>
        <description>Role associated to a Program</description>
        <label>Program Role</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>